--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,12 @@
 * text=auto !eol
+/Makefile -text
+gw/sqlbox.c -text
+gw/sqlbox_mysql.c -text
+gw/sqlbox_mysql.h -text
+gw/sqlbox_pgsql.c -text
+gw/sqlbox_pgsql.h -text
+gw/sqlbox_sql.c -text
+gw/sqlbox_sql.h -text
+gwlib/dbpool_mssql.c -text
+/sqlbox-faq.txt -text
+/sqlbox.patch -text
