- Applied patch of Martin <reflejo@gmail.com> for the bug:         SQLbox is not reading smsbox-port. It is hardcoded to 13005.         - Applied patch of Martin <reflejo@gmail.com>:         Delivery reports are now stored as 'DLR' in the MOMT database field.         This makes it easier to filter them out if you are only interested in         MO messages while reading the sent_sms table.         - Bug fixed by Rene Kluwen <rene.kluwen@chimit.nl>:         sqlbox now reads the port value from the mysql-connection group. 	- Added UPGRADE text file.
git-svn-id: https://svn.kannel.org/sqlbox/trunk@9 f3fed257-b28a-44f2-b4e3-79d1f487ca6d

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 * text=auto !eol
 /CHANGES -text
 /Makefile -text
+/UPGRADE -text
 gw/sqlbox.c -text
 gw/sqlbox_mysql.c -text
 gw/sqlbox_mysql.h -text
