--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,25 @@
 * text=auto !eol
-/CHANGES -text
-/Makefile -text
+/AUTHORS -text
+/COPYING -text
+/ChangeLog -text
+/INSTALL -text
+/KannelLICENSE -text
+/Makefile.am -text
+/NEWS -text
+/README -text
 /UPGRADE -text
+/acinclude.m4 -text
+autotools/config.guess -text
+autotools/config.sub -text
+autotools/depcomp -text
+autotools/install-sh -text
+autotools/ltmain.sh -text
+autotools/missing -text
+/bootstrap -text
+/configure.ac -text
+example/sqlbox.conf.example -text
+gw/Makefile.am -text
+gw/sqlbox-cfg.def -text
 gw/sqlbox.c -text
 gw/sqlbox_mysql.c -text
 gw/sqlbox_mysql.h -text
@@ -9,6 +27,4 @@ gw/sqlbox_pgsql.c -text
 gw/sqlbox_pgsql.h -text
 gw/sqlbox_sql.c -text
 gw/sqlbox_sql.h -text
-gwlib/dbpool_mssql.c -text
-/sqlbox-faq.txt -text
-/sqlbox.patch -text
+/libtool -text
