--- a/.gitattributes
+++ b/.gitattributes
@@ -21,8 +21,16 @@ gw/sqlbox-cfg.def -text
 gw/sqlbox.c -text
 gw/sqlbox_mysql.c -text
 gw/sqlbox_mysql.h -text
+gw/sqlbox_oracle.c -text
+gw/sqlbox_oracle.h -text
 gw/sqlbox_pgsql.c -text
 gw/sqlbox_pgsql.h -text
+gw/sqlbox_sdb.c -text
+gw/sqlbox_sdb.h -text
 gw/sqlbox_sql.c -text
 gw/sqlbox_sql.h -text
+gw/sqlbox_sqlite.c -text
+gw/sqlbox_sqlite.h -text
+gw/sqlbox_sqlite3.c -text
+gw/sqlbox_sqlite3.h -text
 /sb-config.h.in -text
