Completed documentation on missing DB engines. Added RPM support into Makefile.
git-svn-id: https://svn.kannel.org/sqlbox/trunk@21 f3fed257-b28a-44f2-b4e3-79d1f487ca6d

--- a/.gitattributes
+++ b/.gitattributes
@@ -33,4 +33,5 @@ gw/sqlbox_sqlite.c -text
 gw/sqlbox_sqlite.h -text
 gw/sqlbox_sqlite3.c -text
 gw/sqlbox_sqlite3.h -text
+rpm/sqlbox.spec.in -text svneol=unset#application/octet-stream
 /sb-config.h.in -text
