- Added support for MS-SQL and Sybase - Added rpm target - Fixed tab->spaces across all code
git-svn-id: https://svn.kannel.org/sqlbox/trunk@24 f3fed257-b28a-44f2-b4e3-79d1f487ca6d

--- a/.gitattributes
+++ b/.gitattributes
@@ -19,6 +19,8 @@ example/sqlbox.conf.example -text
 gw/Makefile.am -text
 gw/sqlbox-cfg.def -text
 gw/sqlbox.c -text
+gw/sqlbox_mssql.c -text
+gw/sqlbox_mssql.h -text
 gw/sqlbox_mysql.c -text
 gw/sqlbox_mysql.h -text
 gw/sqlbox_oracle.c -text
