Added support for meta-data on all DB engines Added support for automake 1.11
git-svn-id: https://svn.kannel.org/sqlbox/trunk@28 f3fed257-b28a-44f2-b4e3-79d1f487ca6d

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+/.DS_Store
 /.cproject
+/.cvsignore
+/.dep.inc
 /.project
 /Makefile
+/Makefile-sqlbox.mk
 /Makefile.in
 /aclocal.m4
 /autom4te.cache
@@ -9,9 +13,17 @@ autotools/install-sh
 autotools/missing
 /config.status
 /configure
+doc/userguide.html
+doc/userguide.pdf
+doc/userguide.ps
+doc/userguide.rtf
+gw/.deps
+gw/.libs
 gw/Makefile
 gw/Makefile.in
 gw/sqlbox
 /libtool
+/nbproject
 rpm/sqlbox.spec
 /sb-config.h
+/stamp-h1
