2010-10-07  Stipe Tolj  <stolj at kannel.org>     * autotools/*, aclocal.m4, configure, Makefile.in: add autotool build by       bootstrap run for distribution.
git-svn-id: https://svn.kannel.org/sqlbox/trunk@37 f3fed257-b28a-44f2-b4e3-79d1f487ca6d

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,14 +5,17 @@
 /INSTALL -text
 /KannelLICENSE -text
 /Makefile.am -text
+/Makefile.in -text
 /NEWS -text
 /README -text
 /UPGRADE -text
 /acinclude.m4 -text
+/aclocal.m4 -text
 autotools/config.guess -text
 autotools/config.sub -text
 autotools/ltmain.sh -text
 /bootstrap -text
+/configure -text
 /configure.in -text
 doc/userguide.xml -text
 example/sqlbox.conf.example -text
