git-svn-id: https://svn.kannel.org/sqlbox/trunk@40 f3fed257-b28a-44f2-b4e3-79d1f487ca6d

--- a/.gitattributes
+++ b/.gitattributes
@@ -13,7 +13,10 @@
 /aclocal.m4 -text
 autotools/config.guess -text
 autotools/config.sub -text
+autotools/depcomp -text
+autotools/install-sh -text
 autotools/ltmain.sh -text
+autotools/missing -text
 /bootstrap -text
 /configure -text
 /configure.in -text
