git-svn-id: https://svn.kannel.org/sqlbox/trunk@41 f3fed257-b28a-44f2-b4e3-79d1f487ca6d

--- a/.gitattributes
+++ b/.gitattributes
@@ -23,6 +23,7 @@ autotools/missing -text
 doc/userguide.xml -text
 example/sqlbox.conf.example -text
 gw/Makefile.am -text
+gw/Makefile.in -text
 gw/sqlbox-cfg.def -text
 gw/sqlbox.c -text
 gw/sqlbox_mssql.c -text
