--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /Makefile
 /Makefile-sqlbox.mk
 /autom4te.cache
+/config.nice
 /config.status
 doc/userguide.html
 doc/userguide.pdf
@@ -15,6 +16,7 @@ gw/.deps
 gw/.libs
 gw/Makefile
 gw/sqlbox
+/libtool
 /nbproject
 rpm/sqlbox.spec
 /sb-config.h
